Changelog
=========

1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2013-04-10)
----------------

* Initial release.