@@ -62,12 +62,16 @@ diazo_resources
 This is where you'll put your Diazo resources including a rules XML file and one or more template HTML files.
 You may wish to interactively develop these theme elements in the theming editor (for Plone 4.3+), then export the resources and add them here.
 
-A sample theme is included to use as a starting point.
-Just replace it if you don't need it.
-The sample theme's key feature is that it makes use of all of Plone's CSS and JavaScript as a starting point.
+A sample theme is included to use as a starting point. Just replace it if you
+don't need it. The sample theme's key feature is that it makes use of all of
+Plone's CSS and JavaScript as a starting point.
 
-NOTE: The Diazo theme will be available in Plone even if you have not installed the package.
-It will not be applied, though, until enabled in the Theme configlet of site setup.
+Everything you put in this directory and its subdirectories is publicly
+available at ++theme++namespace.package/resourcename.ext.
+
+NOTE: The Diazo theme will be available in Plone even if you have not
+installed the package. It will not be applied, though, until enabled in the
+Theme configlet of site setup.
 
 diazo_resources/static
 ----------------------
@@ -75,24 +79,39 @@ diazo_resources/static
 This is the conventional place to put static resources like CSS, JS and image files.
 There's nothing magic about "static". Remove or replace it if it fits your needs.
 
+Everything you put in this directory and its subdirectories is publicly
+available at ++theme++namespace.package/static/resourcename.ext.
+
 locales
 -------
 
-If your templates include translatable messages, you may provide translation files in this directory.
-Ignore it if you don't need translations.
+If your templates include translatable messages, you may provide translation
+files in this directory. Ignore it if you don't need translations.
 
 profiles, profiles/default
 --------------------------
 
-This is the Generic Setup profile for the add on.
-The is applied when you use the "add ons" configlet in site setup to install the package.
+This is the Generic Setup profile for the add on. The is applied when you use
+the "add ons" configlet in site setup to install the package.
 
 This profile has a couple of important features:
 
-* It sets up a BrowserLayer, which insures tha template overrides and registry settings do not affect other Plone installations unless this theme is installed.
+* It sets up a BrowserLayer, which insures tha template overrides and registry
+settings do not affect other Plone installations unless this theme is
+installed.
 
-* It has template registrations for CSS and JavaScript resource registries.
-  These allow you to incorporate static resources which are part of the theme into the Plone resource registries for efficient merging with other CSS and JS resources.
+* It has sample resource registrations for CSS and JavaScript resource
+registries.   These allow you to incorporate static resources which are part
+of the theme into the Plone resource registries for efficient merging with
+other CSS and JS resources. The samples are commented out. If you remove the
+comment markers and install/reinstall the theme, the main.css and main.js
+files from your diazo_resources/static directory will be incorporated into the
+CSS and JS delivered by Plone — even if the Diazo theme is not active.
+
+The alternative to adding your resources to the registries is to load them
+directly in your theme's index.html. This is a better approach if you don't
+intend to use Plone's own CSS and JS resources. If you do, registering your
+own resources will allow them to be merged for more efficient delivery.
 
 template_overrides
 ------------------
@@ -109,8 +128,9 @@ The full, dotted name for this resource is::
 
     plone.app.layout.viewlets.footer.pt
 
-Template overrides are only applied when the BrowserLayer is installed.
-So, they won't affect Plone installations where this package is not installed.
+Template overrides are only applied when the BrowserLayer is installed by
+installing your package. So, they won't affect Plone installations where this
+package is not installed.
 
 A sample override for the Plone footer is included. Delete it if you don't need it.
 
