@@ -1,2 +1,6 @@
-// JavaScript for the 'ICustomTheme' Plone browser layer */
+/* JavaScript for the 'ICustomTheme' Plone browser layer */
 
+/*jslint white:false, onevar:true, undef:true, nomen:true, eqeqeq:true, plusplus:true, bitwise:true, regexp:true, newcap:true, immed:true, strict:false, browser:true */
+/*global jQuery:false, document:false, window:false, location:false */
+
+console.log('main.js loaded');
