@@ -26,6 +26,7 @@ setup(name=${repr($project)},
       zip_safe=False,
       install_requires=[
           'setuptools',
+          'z3c.jbot',
           # -*- Extra requirements: -*-
       ],
       entry_points="""
